Lazy-loaded images no longer cause in-page links to jump to the completely wrong place.

--- a/assets/movies/movies.scss
+++ b/assets/movies/movies.scss
@@ -69,8 +69,12 @@
         display: block;
         margin-bottom: $spacing;
         align-self: center;
-        min-width: 200px;
-        width: 200px;
+
+        img {
+          min-width: 200px;
+          width: 200px;
+          height: auto;
+        }
       }
     }
 
